feat: support group by in ListClusterSnapshots
