# server/internal/server/cluster_snapshot.go
@@ -13,6 +13,10 @@ import (
 	"google.golang.org/protobuf/proto"
 )
 
+const (
+	toGB int64 = 1024 * 1024 * 1024
+)
+
 // ListClusterSnapshots lists the cluster snapshots.
 func (s *S) ListClusterSnapshots(
 	ctx context.Context,
@@ -48,6 +52,7 @@ func (s *S) ListClusterSnapshots(
 		if err != nil {
 			return nil, status.Errorf(codes.Internal, "failed to list cluster snapshot histories for cluster %s: %s", c.ClusterID, err)
 		}
+
 		hs = append(hs, chs...)
 	}
 
@@ -65,6 +70,11 @@ func (s *S) ListClusterSnapshots(
 		return hs[i].HistoryCreatedAt.Before(hs[j].HistoryCreatedAt)
 	})
 
+	allGvals, err := getAllGroupingValues(hs, req.GroupBy)
+	if err != nil {
+		return nil, err
+	}
+
 	// Group histories by hourly intervals in a single pass
 	intervalBuckets := make(map[int64][]*store.ClusterSnapshotHistory)
 	for _, h := range hs {
@@ -76,13 +86,13 @@ func (s *S) ListClusterSnapshots(
 	var dps []*v1.ListClusterSnapshotsResponse_Datapoint
 	for t := startTime; t.Before(endTime); t = t.Add(defaultInterval) {
 		hs := intervalBuckets[t.Unix()]
-		v, err := calculateSnapshotValue(hs)
+		vs, err := calculateSnapshotValues(hs, allGvals, req.GroupBy)
 		if err != nil {
-			return nil, status.Errorf(codes.Internal, "failed to calculate snapshot value: %s", err)
+			return nil, status.Errorf(codes.Internal, "failed to calculate snapshot values: %s", err)
 		}
 		dp := &v1.ListClusterSnapshotsResponse_Datapoint{
 			Timestamp: t.Unix(),
-			Values:    []*v1.ListClusterSnapshotsResponse_Value{v},
+			Values:    vs,
 		}
 		dps = append(dps, dp)
 	}
@@ -92,44 +102,131 @@ func (s *S) ListClusterSnapshots(
 	}, nil
 }
 
-func calculateSnapshotValue(hs []*store.ClusterSnapshotHistory) (*v1.ListClusterSnapshotsResponse_Value, error) {
-	// Group by cluster ID and calculate average GPU capacity per cluster
-	type cluster struct {
+func calculateSnapshotValues(
+	hs []*store.ClusterSnapshotHistory,
+	allGroupingVales []string,
+	groupBy v1.ListClusterSnapshotsRequest_GroupBy,
+) ([]*v1.ListClusterSnapshotsResponse_Value, error) {
+	type stat struct {
 		hsCount        int32
 		nodeCount      int32
 		gpuCapacity    int32
 		memoryCapacity int64
 	}
-	clustersByID := make(map[string]*cluster)
+	stats := make(map[string]*stat)
 
+	// Group snapshots by a grouping key (or cluster if there is no grouping specified).
 	for _, h := range hs {
 		var snapshot v1.ClusterSnapshot
 		if err := proto.Unmarshal(h.Message, &snapshot); err != nil {
 			return nil, err
 		}
 
-		cl, ok := clustersByID[h.ClusterID]
-		if !ok {
-			cl = &cluster{}
-			clustersByID[h.ClusterID] = cl
-		}
+		found := make(map[string]bool)
 
-		cl.hsCount++
-		cl.nodeCount += int32(len(snapshot.Nodes))
 		for _, node := range snapshot.Nodes {
-			cl.gpuCapacity += node.GpuCapacity
-			cl.memoryCapacity += node.MemoryCapacity
+			v, err := getGroupingValue(h.ClusterID, node, groupBy)
+			if err != nil {
+				return nil, err
+			}
+
+			s, ok := stats[v]
+			if !ok {
+				s = &stat{}
+				stats[v] = s
+			}
+
+			if !found[v] {
+				s.hsCount++
+				found[v] = true
+			}
+
+			s.nodeCount++
+			s.gpuCapacity += node.GpuCapacity
+			s.memoryCapacity += node.MemoryCapacity
 		}
 	}
 
-	// Calculate total GPU capacity (sum of averages from each cluster)
-	var result v1.ListClusterSnapshotsResponse_Value
-	for _, c := range clustersByID {
-		// Add average for this cluster
-		result.NodeCount += c.nodeCount / c.hsCount
-		result.GpuCapacity += c.gpuCapacity / c.hsCount
-		result.MemoryCapacityGb += int32(c.memoryCapacity / int64(c.hsCount) / 1024 / 1024 / 1024)
+	// Calculate the average by dividing by the number of snapshot histories.
+	for _, s := range stats {
+		s.nodeCount /= s.hsCount
+		s.gpuCapacity /= s.hsCount
+		s.memoryCapacity /= int64(s.hsCount)
 	}
 
-	return &result, nil
+	if groupBy == v1.ListClusterSnapshotsRequest_GROUP_BY_UNSPECIFIED {
+		// No grouping. Aggregate all stats into a single value.
+		var val v1.ListClusterSnapshotsResponse_Value
+		for _, s := range stats {
+			val.NodeCount += s.nodeCount
+			val.GpuCapacity += s.gpuCapacity
+			val.MemoryCapacityGb += int32(s.memoryCapacity / toGB)
+		}
+		return []*v1.ListClusterSnapshotsResponse_Value{&val}, nil
+	}
+
+	var vals []*v1.ListClusterSnapshotsResponse_Value
+	for _, gval := range allGroupingVales {
+		s, ok := stats[gval]
+		if !ok {
+			// Add missing value.
+			vals = append(vals, &v1.ListClusterSnapshotsResponse_Value{
+				GroupingValue: gval,
+			})
+			continue
+		}
+
+		vals = append(vals, &v1.ListClusterSnapshotsResponse_Value{
+			GroupingValue:    gval,
+			NodeCount:        s.nodeCount,
+			GpuCapacity:      s.gpuCapacity,
+			MemoryCapacityGb: int32(s.memoryCapacity / toGB),
+		})
+	}
+
+	return vals, nil
+}
+
+func getAllGroupingValues(
+	hs []*store.ClusterSnapshotHistory,
+	groupBy v1.ListClusterSnapshotsRequest_GroupBy,
+) ([]string, error) {
+	gvalMap := map[string]bool{}
+	for _, h := range hs {
+		var snapshot v1.ClusterSnapshot
+		if err := proto.Unmarshal(h.Message, &snapshot); err != nil {
+			return nil, err
+		}
+
+		for _, node := range snapshot.Nodes {
+			v, err := getGroupingValue(h.ClusterID, node, groupBy)
+			if err != nil {
+				return nil, err
+			}
+			gvalMap[v] = true
+		}
+	}
+
+	var gvals []string
+	for v := range gvalMap {
+		gvals = append(gvals, v)
+	}
+	sort.Strings(gvals)
+
+	return gvals, nil
+}
+
+func getGroupingValue(clusterID string, node *v1.ClusterSnapshot_Node, groupBy v1.ListClusterSnapshotsRequest_GroupBy) (string, error) {
+	switch groupBy {
+	case v1.ListClusterSnapshotsRequest_GROUP_BY_UNSPECIFIED:
+		// Still use the cluster name (to average histories per cluster). It will be summed up later.
+		return clusterID, nil
+	case v1.ListClusterSnapshotsRequest_GROUP_BY_CLUSTER:
+		return clusterID, nil
+	case v1.ListClusterSnapshotsRequest_GROUP_BY_PRODUCT:
+		return node.NvidiaAttributes.Product, nil
+	default:
+		return "", status.Errorf(codes.InvalidArgument, "invalid value to groupBy: %v", groupBy)
+	}
+
 }
